Update index.html, header.html, and 6 more files...

--- a/partials/header.html
+++ b/partials/header.html
@@ -1,16 +1,20 @@
-<header class="">
+<header class="p-4 border-b-2 border-ms-pink border-groove bg-ms-dark-purple">
     <div>
-        <h1>MusicStory</h1>
+        <h1 class="text-ms-pink text-center text-[3rem]">MusicStore</h1>
     </div>
 
     <div>
         <form>
-            <div class="border-2 border-zinc-500 rounded-full flex justify-between">
-                <input class="px-4 rounded-full" type="text" placeholder="Busque aqui seu produto">
-                <button> <img src="/assets/icons/search.svg" width="20px"> </button>
+            <div class="border-2 border-zinc-500 rounded-full flex justify-between bg-white">
+                <input class="pl-4 rounded-full input focus:outline-none" type="text" placeholder="Busque aqui seu produto">
+                <button> 
+                    <div class="w-[30px] h-[30px] svg--white rounded-full flex justify-center items-center" w3-include-html="./partials/svgs/search.html"></div>
+                </button>
             </div>
         </form>
     </div>
 
-    <div></div>
+    <div>
+        
+    </div>
 </header>
