[Header-mobile] structure and style finished

--- a/partials/header.html
+++ b/partials/header.html
@@ -3,18 +3,32 @@
         <h1 class="text-ms-pink text-center text-[3rem]">MusicStore</h1>
     </div>
 
-    <div>
+    <div class="mt-[20px]">
         <form>
             <div class="border-2 border-zinc-500 rounded-full flex justify-between bg-white">
                 <input class="pl-4 rounded-full input focus:outline-none" type="text" placeholder="Busque aqui seu produto">
                 <button> 
-                    <div class="w-[30px] h-[30px] svg--white rounded-full flex justify-center items-center" w3-include-html="./partials/svgs/search.html"></div>
+                    <div class="w-[30px] h-[30px] svg__bg--purple svg--white svg--size-15 rounded-full flex justify-center items-center" w3-include-html="./partials/svgs/search.html"></div>
                 </button>
             </div>
         </form>
     </div>
 
-    <div>
-        
-    </div>
+    <nav class="flex justify-center mt-[20px]">
+        <a>
+            <div class="w-[30px] h-[30px] mr-7 svg--white svg--size-20 rounded-full flex justify-center items-center" w3-include-html="./partials/svgs/hamburguer.html"></div>
+        </a>
+
+        <a>
+            <div class="w-[30px] h-[30px] mr-7 svg--white svg--size-20 rounded-full flex justify-center items-center" w3-include-html="./partials/svgs/profile.html"></div>
+        </a>
+
+        <a>
+            <div class="w-[30px] h-[30px] mr-7 svg--white svg--size-20 rounded-full flex justify-center items-center" w3-include-html="./partials/svgs/heart.html"></div>
+        </a>
+
+        <a>
+            <div class="w-[30px] h-[30px] svg--white svg--size-20 rounded-full flex justify-center items-center" w3-include-html="./partials/svgs/cart.html"></div>
+        </a>
+    </nav>
 </header>
