home mobile finished 1.0

--- a/partials/header.html
+++ b/partials/header.html
@@ -16,7 +16,7 @@
 
     <nav class="flex justify-center mt-[20px]">
         <a>
-            <div class="w-[30px] h-[30px] mr-7 svg--white svg--size-20 rounded-full flex justify-center items-center" w3-include-html="./partials/svgs/hamburguer.html"></div>
+            <div id="ms-mobile-hamb" class="w-[30px] h-[30px] mr-7 svg--white svg--size-20 rounded-full flex justify-center items-center" w3-include-html="./partials/svgs/hamburguer.html"></div>
         </a>
 
         <a>
