--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 @import url('fonts.css');
 @import url('svgs.css');
 @import url('./partials/header.css');
+@import url('./partials/menu.css');
 @import url('./global/global.css');
