--- a/styles/global/global.css
+++ b/styles/global/global.css
@@ -1,3 +1,9 @@
 .ms-grid {
     grid-template-columns: 160px 160px;
 }
+
+@media screen and (min-width: 768px) {
+    .ms-grid {
+        grid-template-columns: 200px 200px 200px 200px;
+    }
+}
