--- a/partials/header.html
+++ b/partials/header.html
@@ -1,6 +1,8 @@
 <header class="p-4 border-b-2 border-ms-pink border-groove bg-ms-dark-purple md:flex md:flex-col">
     <div class="md:flex md:justify-between">
-        <h1 class="text-ms-pink text-center text-[3rem]">MusicStore</h1>
+        <a href="index.html">
+            <h1 class="text-ms-pink text-center text-[3rem]">MusicStore</h1>
+        </a>
         
         <div class="hidden md:flex">
             <a href="#" class="mr-14">
