--- a/partials/header.html
+++ b/partials/header.html
@@ -5,7 +5,7 @@
         </a>
         
         <div class="hidden md:flex">
-            <a href="#" class="mr-14">
+            <a href="carrinho.html" class="mr-14">
                 <div class="svg--white svg--size-40 rounded-full flex justify-center items-center" w3-include-html="./partials/svgs/cart.html"></div>
             </a>
             
